Implements ping endpoint for monitoring purpose
