# api/router/router.go
@@ -45,6 +45,7 @@ func SetupAndRun(gormClient *gorm.DB) error {
 	r.GET("/siret/:id", views.GetSiret)
 	r.GET("/siren/:id", views.GetSiren)
 	r.GET("/history", views.GetHistory)
+	r.GET("/ping", views.GetPing)
 
 	// Run the server
 	logrus.WithFields(logrus.Fields{"port": conf.C.Server.Port, "host": conf.C.Server.Host}).Info("Starting server")
